namespace PoRedoImage.Domain.Entities;

/// <summary>Kind of user image stored in the gallery.</summary>
public enum UserImageKind { Original, Regeneration, Meme, BulkVariation }
