erDiagram
    USER {
        string UserId PK "ClaimTypes.NameIdentifier\ne.g. dev|user@test.com"
        string DisplayName "ClaimTypes.Name"
        string Email "ClaimTypes.Email"
        string AuthScheme "cookie | oidc"
    }

    USER_IMAGE {
        string Id PK "Guid N-format — row key"
        string UserId FK "= USER.UserId (partition key)"
        string FileName "original upload filename"
        string ContentType "image/jpeg | image/png"
        UserImageKind Kind "enum — see below"
        DateTimeOffset CreatedAt "UTC timestamp"
        long SizeBytes "file size in bytes"
    }

    BULK_PROMPT {
        string PartitionKey "always 'prompts'"
        string RowKey PK "= UserId"
        string Name "= UserId (display label)"
        string PromptText "JSON array of 10 prompt strings"
        DateTimeOffset CreatedAt "UTC timestamp"
    }

    USER ||--o{ USER_IMAGE : "owns"
    USER ||--o| BULK_PROMPT : "has saved prompts"

    USER_IMAGE_KIND {
        int Value "0=Original, 1=Regeneration, 2=Meme, 3=BulkVariation"
    }

    PROCESSING_MODE {
        int Value "0=ImageRegeneration, 1=MemeGeneration"
    }
